Home-page fixed with the font size on big/small screen and hamburger navbar fixed so thet it closes itself on small screen after being clicked-on

--- a/src/components/footer/styles/style.css
+++ b/src/components/footer/styles/style.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: #333;
   color: #fff;
-  /* padding: 20px 0; */
+  padding: 30px 0;
   text-align: center;
   /* position: relative; */
   /* bottom: 0; */
