--- a/src/components/homepage/styles/style.css
+++ b/src/components/homepage/styles/style.css
@@ -40,19 +40,22 @@
 } */
 
 .content-container {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   max-width: 800px;
   z-index: 1;
 }
 
 .title-hero {
-  /* font-size: 4rem; */
+  font-size: 4.5rem;
   color: var(--accent-color);
   margin-bottom: 1rem;
+  text-shadow: 3px 4px 6px rgb(44, 44, 44);
 }
 
 .info-text {
-  font-size: 1.2rem;
+  font-size: 2rem;
   color: #1e1c1c;
   line-height: 1.5;
   margin-bottom: 2rem;
@@ -91,6 +94,14 @@
   .hero-image {
     
     background-position: center;
+  }
+  .title-hero {
+    font-size: 2.5rem;
+   
+  }
+  .info-text {
+    font-size: 1.2rem;
+    
   }
   
 }
